# hex2bix

./: .gitignore  CMakeLists.txt  Makefile  hex2bix.c
source/: hex2bix.cpp
